[Tutorial] Custom Stack - Updates Branding  section